--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -85,21 +85,46 @@ body {
   height: 100%;
   z-index: 2;
   display: flex;
-  flex-wrap: wrap; 
+  flex-direction: column;
   justify-content: space-evenly;
-  align-items: center;
+  .emotes__button__wrapper {
+    width: 100%;
+    height: 72%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    .emote__button {
+      width: 70vh;
+      height: 25vh;
+      background-image: url('../assets/images/controller/shield.png');
+      background-size: 100% 100%;
+      background-color: transparent;
+      outline: none;
+      text-align: center;
+      font-size: 1.5em;
+    }
+  }
+  .select__button__wrapper {
+    width: 100%;
+    height: 28%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    .button__select {
+      width: 55vh;
+      height: 16vh;
+      margin-bottom: 4%;
+      color: #fff;
+      font-size: 4.5vh;
+    }
+  }
 }
 
-.emote__button {
-  width: 40%;
-  height: 40%;
-  background-image: url('../assets/images/controller/shield.png');
-  background-size: 100% 100%;
-  background-color: transparent;
-  outline: none;
-  text-align: center;
-  font-size: 1.5em;
-}
+
+
+
 
 /* Winning/ Losing State*/
 .loosing,
@@ -205,7 +230,6 @@ body {
   border-bottom: 30px solid transparent;
   border-right: 40px solid #97602b;
   z-index: 3;
-  pointer-events: none;
 }
 
 .button__triangle--right {
@@ -249,6 +273,7 @@ body {
   margin-bottom:2%;
   bottom: 0;
   position: absolute;
+  background-color: transparent;
   background-image: url('../assets/images/controller/shield.png');
   background-size: 100% 100%;
   background-repeat: no-repeat;
