--- a/src/scss/states/emotes.scss
+++ b/src/scss/states/emotes.scss
@@ -1,5 +1,5 @@
 .emotes {
-	.button__select {
+	#button--ready {
 		display: flex;
 		opacity: 0;
 		pointer-events: none;
@@ -9,7 +9,9 @@
 		color: #fff;
 		font-size: 4.5vh;
 		justify-content: center;
-		background-color: #b88b1a;
+		background-image: url('../assets/images/controller/shield.png');
+		background-size: 100% 100%;
+		background-color: transparent;
 	}
 
 	.button--visible {
