--- a/src/scss/states/winning-loosing.scss
+++ b/src/scss/states/winning-loosing.scss
@@ -8,6 +8,7 @@
 .winning__info,
 .loosing__info {
 	z-index: 4;
+	color: #000;
 	position: relative;
 	font-family: 'Bungee', cursive;
 	font-size: 45px;
