style(controller.js, controller.html, scss): change layout of buttons
#96

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,7 +6,7 @@ body {
 
 body:after{
  display:none;
- content: url('../assets/images/controller/button-left.svg') url('../assets/images/controller/button-right.svg') url('../assets/images/controller/button-right-selected.svg') url('../assets/images/controller/button-left-selected.svg');
+ content: url('../assets/images/controller/button-left.svg') url('../assets/images/controller/button-right.svg') url('../assets/images/controller/button-jump.svg') url('../assets/images/controller/button-shoot.svg') url('../assets/images/controller/button-right-selected.svg') url('../assets/images/controller/button-left-selected.svg') url('../assets/images/controller/button-jump-selected.svg') url('../assets/images/controller/button-shoot-selected.svg');
 }
 
 * {
