--- a/src/scss/states/game.scss
+++ b/src/scss/states/game.scss
@@ -10,6 +10,7 @@
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
+	transform: rotate(45deg);
 }
 
 .button {
@@ -22,8 +23,8 @@
 }
 
 .button--right {
-	height: 100vh;
-	width: 25vw;
+	height:90vh;
+	width: 30vw;
 	border-radius: 0;
 	overflow:hidden;
 	background-image: url('../assets/images/controller/button-right.svg');
@@ -36,22 +37,23 @@
 }
 
 .controller__interaction {
-	width: 50vw;
-	height: 100vh;
+	flex: 1;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	transform: rotate(-45deg);
+	margin-left:-10vw;
 }
 
 .button--shoot {
-	height: 50vh;
-	width: 50vw;
+	height:90vh;
+	width: 30vw;
 	border-radius: 0;
 	overflow:hidden;
-	display:flex;
-	align-items: center;
-	justify-content: center;
-	background-image: url('../assets/images/controller/button2.png');
+	background-image: url('../assets/images/controller/button-shoot.svg');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
-	font-family: 'Bungee', cursive;
 }
 
 .button__right--active {
@@ -62,23 +64,27 @@
 	background-image:url('../assets/images/controller/button-left-selected.svg') !important;
 }
 
+.button__jump--active {
+	background-image:url('../assets/images/controller/button-jump-selected.svg') !important;
+}
+
+.button__shoot--active {
+	background-image:url('../assets/images/controller/button-shoot-selected.svg') !important;
+}
+
 .button--jump {
-	height: 50vh;
-	width: 50vw;
+	height:90vh;
+	width: 30vw;
 	border-radius: 0;
-	display:flex;
-	align-items: center;
-	justify-content: center;
 	overflow:hidden;
-	background-image: url('../assets/images/controller/button2.png');
+	background-image: url('../assets/images/controller/button-jump.svg');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
-	font-family: 'Bungee', cursive;
 }
 
 .button--left {
-	height: 100vh;
-	width: 25vw;
+	height:90vh;
+	width: 30vw;
 	border-radius: 0;
 	overflow:hidden;
 	background-image: url('../assets/images/controller/button-left.svg');
