feat(Score.js, Controller.js): player now able to reconnect when disconnected in score/emote state
#48

--- a/src/scss/states/emotes.scss
+++ b/src/scss/states/emotes.scss
@@ -20,6 +20,12 @@
 		opacity: 1 !important;
 		pointer-events: all !important;
 	}
+
+	.button--grey {
+		pointer-events: none !important;
+		-webkit-filter: grayscale(100%);
+	  filter: grayscale(100%);
+	}
 }
 
 .emotes__button__wrapper {
